@@ -233,6 +233,7 @@ extern guint im_options;
 #define OPT_IM_SIDE_TAB			0x00000020
 #define OPT_IM_BR_TAB			0x00000040
 #define OPT_IM_HIDE_ICONS		0x00000080
+#define OPT_IM_NO_ANIMATION		0x00000100
 #define OPT_IM_ALIAS_TAB		0x00002000
 #define OPT_IM_POPDOWN			0x00004000
 
